[gd_scene load_steps=5 format=3 uid="uid://gameover123"]

[ext_resource type="Script" path="res://scripts/ui/GameOver.gd" id="1_gameover"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.04, 0.15, 0.97)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.25, 0.9, 0.8)
corner_radius_left = 20
corner_radius_top = 20
corner_radius_right = 20
corner_radius_bottom = 20
shadow_color = Color(0.4, 0.15, 0.8, 0.5)
shadow_size = 15
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.5, 0.2, 0.9, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.5, 1, 0.8)
corner_radius_left = 12
corner_radius_top = 12
corner_radius_right = 12
corner_radius_bottom = 12
shadow_color = Color(0.3, 0.1, 0.6, 0.4)
shadow_size = 4
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.6, 0.3, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.6, 1, 1)
corner_radius_left = 12
corner_radius_top = 12
corner_radius_right = 12
corner_radius_bottom = 12
shadow_color = Color(0.4, 0.2, 0.8, 0.6)
shadow_size = 6
shadow_offset = Vector2(0, 4)

[node name="GameOver" type="CanvasLayer"]
layer = 20
script = ExtResource("1_gameover")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.01, 0.06, 0.85)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -240.0
offset_right = 180.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.35, 0.45, 1)
theme_override_colors/font_outline_color = Color(0.3, 0, 0.1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 46
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ScoreTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.5, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "FINAL SCORE"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.1, 0.5, 0.8)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.9, 1)
theme_override_font_sizes/font_size = 22
text = "üìè HEIGHT: 0m"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="BestLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.15, 0, 0.6)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "‚òÖ BEST: 0 ‚òÖ"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "‚ñ∂ PLAY AGAIN"

[node name="MenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 42)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7, 0.6, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "MAIN MENU"

[node name="TapHint" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.4, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "‚Äî tap anywhere to restart ‚Äî"
horizontal_alignment = 1

